Phani : Fix Drug Name wrap

--- a/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
+++ b/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
@@ -36,6 +36,10 @@
   align-items: center;
 }
 
+.name-tooltip {
+  max-width: 98%;
+}
+
 .dosage {
   font-size: 12px;
   font-weight: 400;
